fix: fixed script for copying post trees for overflow testing; header menu scroll issue remains - todo

--- a/blog/static/styles.css
+++ b/blog/static/styles.css
@@ -69,26 +69,24 @@ hr {
     align-items: center;
     height: 4rem;
     width: 100%;
-    z-index: 2;
 }
 
 .header-menu {
-    box-sizing: content-box;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     position: absolute;
     top: 0;
     right: -100%;
-    width: 24%;
-    min-width: 15rem;
-    max-height: 90vh;
-    padding: 1rem 2rem;
+    width: 25%;
+    height: 100vh;
+    min-width: 20rem;
+    padding: 3rem 2rem;
     background-color: #fff;
     border: 1px solid #acacac;
     opacity: 0;
     overflow-y: auto;
-    z-index: 3;
+    z-index: 2;
     transition: opacity 0.1s cubic-bezier(0, 0.47, 0.745, 0.715), right 0.2s cubic-bezier(1, 0, 1, 1);
 }
 
@@ -106,6 +104,7 @@ hr {
     border: 1px solid #fff;
     border-radius: 0.33rem;
     cursor: pointer;
+    z-index: 3;
 }
 
 .menu-button div {
@@ -119,7 +118,7 @@ hr {
 }
 
 .header-menu.active {
-    right: 3rem;
+    right: 0;
     opacity: 1;
     transition: opacity 0.4s cubic-bezier(0.47, 0, 0.745, 0.715), right 0.3s cubic-bezier(0, 0, 0, 1);
 }
@@ -142,7 +141,7 @@ hr {
 
 /* || Content */
 
-.wrapper {
+.main-wrapper {
     padding-top: 2.5rem;
 }
 
@@ -185,7 +184,7 @@ hr {
     margin-top: 1rem;
 }
 
-/* || Nav Panel */
+/* || Sidebar */
 
 .sidebar {
     display: none;
@@ -347,6 +346,8 @@ footer, .nav-cover {
     width: 100%;
 }
 
+/* || Media Queries */
+
 @media screen and (min-width: 30rem) {
     .overlay-text.lower {
         font-size: 2rem;
@@ -407,10 +408,6 @@ footer, .nav-cover {
 
     .menu-button div {
         height: 0.5rem;
-    }
-
-    .header-menu.active {
-        right: 5rem;
     }
 
     footer {
